--- a/first-proto/package.json
+++ b/first-proto/package.json
@@ -1,12 +1,13 @@
 {
     "type": "module",
-    "jest" : {
-        "transform" : {}
+    "jest": {
+        "transform": {}
     },
     "scripts": {
         "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
     },
     "devDependencies": {
+        "@types/jest": "^30.0.0",
         "jest": "^30.0.0"
     }
 }
