--- a/first-proto/package.json
+++ b/first-proto/package.json
@@ -8,6 +8,7 @@
     },
     "devDependencies": {
         "@types/jest": "^30.0.0",
-        "jest": "^30.0.0"
+        "jest": "^30.0.0",
+        "jest-environment-jsdom": "^30.0.4"
     }
 }
